Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-07-08 (SVN):
    * Updated documentation for supported platforms and separate ports.

2012-07-07 (SVN):
    * arch_def.h: Added GNU/Hurd defs.

2012-07-07 (SVN):
    * gl_vidnt.c, gl_vidsdl.c: Moved the glColorTableEXT definitions to
      gl_func.h.

2012-07-07 (SVN):
    * updated version date stamp to 2012-07-07.

2012-07-07 (SVN):
    * net_sys.h: GNU/Hurd has BSD-style struct sockaddr too (reported
      by Svante Signell in debian bug #657793.)

2012-07-06 (SVN):
    * Added -noixemul to CPPFLAGS for MorphOS in all of the Makefiles.
      For h2patch, added new Makefile.amiga for AmigaOS and MorphOS
      builds.
    * updated version date stamp to 2012-07-06.

2012-07-05 (SVN):
    * h2/windows: Removed hooks for QHOST, which is (was) a proprietery
      server management tool by Xoanan.

2012-07-05 (SVN):
    * Incremented engine version to 1.5.5 and datestamp to 2012-07-05 in
      the development tree.

2012-07-01 (1.5.4-final / SVN):
    * SV_Gamedir, SV_Gamedir_f, FS_Gamedir: Reverted bad gamedir checks
      using filenames.h macros and went back to explicitly searching the
      unwanted slash, backslash and colon characters. In FS_Gamedir, use
      Con_Printf and not Sys_Printf as it can be called when the game is
      alive, at least for hexenworld. In SV_BeginDownload_f, added names
      with a leading backslash to the list of rejected names.
    * updated version date stamp to 2012-07-01.

2012-06-30 (SVN):
    * updated the ReleaseNotes file.

2012-06-30 (SVN):
    * hexen2, cl_effect.c (CL_ParseEffect): ent->abslight and ent->scale
      are of int type, not float, therefore they must be not be assigned
      normalized floating point values but integers, another old HexenII
      bug caught by clang-3.1. Changed ent->abslight assignment from 0.2
      to 51 for CE_ACID_MUZZFL, 1 to 255 for CE_ONFIRE, CE_FLAMESTREAM